add login component

--- a/sandbox-ui/src/styles/_colors.scss
+++ b/sandbox-ui/src/styles/_colors.scss
@@ -8,6 +8,9 @@ $accent-dark-color : #c1711d;
 
 $secondary_color : #32c5d2;
 
+$background-color : #f5f5f5;
+
+
 $gray_0 :#f8f9fa;
 $gray_1 : #f1f3f5;
 $gray_2 : #e9ecef;
