--- a/sandbox-ui/src/styles/main.scss
+++ b/sandbox-ui/src/styles/main.scss
@@ -2,7 +2,83 @@
 @import "mixing";
 @import "colors";
 @import "animations";
+@import "form-controlls";
+@import "bootstrap_overides";
 
-body{
-  font-family: 'Lato', sans-serif;
+html,body{
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom:0;
 }
+
+body *{
+  font-family: 'Open Sans', sans-serif;
+}
+
+
+
+.spinner-container{
+  margin-top: 50%;
+  min-height: 100%;
+
+  .spinner{
+    margin: auto;
+    width: 50px;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
+    position: absolute;
+    left: 50%;
+    top: 45%;
+    margin-left: -25px;
+
+    &>div{
+      background-color: $accent-color;
+    }
+  }
+}
+
+
+
+#toasty {
+  .toast{
+    width: 350px;
+    opacity: 1;
+    &.toasty-theme-material{
+
+      &.toasty-type-error{
+        background-color: $error-red;
+        color: white;
+      }
+
+      &.toasty-type-success{
+        background-color: $success;
+        color: white;
+      }
+
+      &.toasty-type-warning{
+        background-color: $warning;
+        color: white;
+      }
+
+    }
+
+  }
+}
+
+.tooltip-inner{
+  padding: 5px 10px;
+  color: #fff;
+  background-color: $primary-color_light;
+  border-radius: 0px;
+}
+
+.tooltip.top{
+  min-width: 120px;
+}
+
+.tooltip.top .tooltip-arrow{
+  border-top-color: $primary-color_light;
+}
+
