--- a/sandbox-ui/src/app/app.component.scss
+++ b/sandbox-ui/src/app/app.component.scss
@@ -1,5 +1,104 @@
 @import "../styles/colors";
+@import "../styles/varibles";
+@import "../styles/mixing";
 
 :host{
   background-color: $background-color;
+  min-width: 300px;
+
+  &.login{
+    background-color:$background-color-login
+  }
+}
+
+:host /deep/ ng2-toasty .toast{
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+
+
+  -webkit-animation-name: bounceInUp;
+  -moz-animation-name: bounceInUp;
+  -o-animation-name: bounceInUp;
+  animation-name: bounceInUp;
+}
+
+router-outlet{
+  display: block;
+
+  @media screen and (max-width: 768px) {
+    padding-top: 40px;
+  }
+}
+
+ng2-slim-loading-bar{
+  position: fixed;
+  top: $topbar-height;
+  z-index: 500;
+  left: 0px;
+  right: 0px;
+}
+
+:host /deep/ ng2-slim-loading-bar .slim-loading-bar-progress{
+  background-color: $accent-color !important;
+  height: 4px !important;
+}
+
+.container-fluid{
+  height: 100%;
+}
+
+.content-container{
+  margin-left: -15px;
+  margin-right: -15px;
+  position: relative;
+  margin-top: $topbar-height;
+  @media screen and (max-width: 768px) {
+    margin-top: $topbar-height * 2;
+  }
+}
+
+.menu-container{
+  position: fixed;
+  top: $topbar-height + $main-breadcrumbs-height;
+  bottom: 0px;
+  left: 0px;
+  z-index:100;
+
+  @media screen and (max-width: 768px) {
+    top: $topbar-height * 2;
+  }
+}
+
+.view-container{
+  @include transition(margin-left 0.8s ease-in-out);
+  margin-left: $main-menu-default-width;
+
+  &.menu-expand{
+    animation-delay: 0.5s;
+    margin-left: $main-menu-expanded-width;
+  }
+
+  .breadcrumbs-bar{
+    border-radius: 0px;
+    height: $main-breadcrumbs-height;
+    line-height: 2.2em;
+    background-color: $primary-color_dark;
+    position: fixed;
+    z-index: 100;
+    padding-left: $main-menu-default-width;
+    left: 0px;
+    right: 0px;
+    min-width: $app-min-width - $main-menu-default-width;
+    @include transition(all 0.3s ease-in-out);
+
+    &.menu-expand{
+      padding-left: $main-menu-expanded-width;
+    }
+  }
+
+  .content-div{
+    margin-top: $main-breadcrumbs-height;
+  }
 }
