--- a/sandbox-ui/src/app/authentication/login/login.component.scss
+++ b/sandbox-ui/src/app/authentication/login/login.component.scss
@@ -30,7 +30,7 @@
 
   .form-container {
     background-color: white;
-    box-shadow: 0px 0px 20px 3px #e6e5e5;
+    box-shadow: 0px 5px 5px 0px #2d467b;
 
     .form-fields{
       padding: 20px 30px;
