--- a/sandbox-ui/src/app/shared/components/main-menu/main-menu.component.scss
+++ b/sandbox-ui/src/app/shared/components/main-menu/main-menu.component.scss
@@ -5,7 +5,7 @@
 
 :host{
   display: block;
-  background-color: $primary-color_menu;
+  background-color: $primary-color_dark;
   height: 100%;
 }
 
@@ -58,7 +58,7 @@ ul{
     }
 
     &.selected{
-      background-color: $secondary_color;
+      background-color: $accent-color;
       .icon{
         color:white;
       }
