--- a/sandbox-ui/src/styles/_colors.scss
+++ b/sandbox-ui/src/styles/_colors.scss
@@ -1,4 +1,5 @@
-$primary-color_main : #14354C;
+$primary-color_main : #3b5998;
+$primary-color_dark : #263961;
 $primary-color_menu : #1b4665;
 $primary-color_light : #164e6a;
 
@@ -9,6 +10,7 @@ $accent-dark-color : #c1711d;
 $secondary_color : #32c5d2;
 
 $background-color : #f5f5f5;
+$background-color-login : #3b5998;
 
 
 $gray_0 :#f8f9fa;
