--- a/sandbox-ui/src/app/shared/components/app-header/app-header.component.html
+++ b/sandbox-ui/src/app/shared/components/app-header/app-header.component.html
@@ -11,7 +11,7 @@
 
     <div class="navbar-right text-right">
       <app-user-avatar
-            ></app-user-avatar>
+            [userInfo]="userInfo"></app-user-avatar>
     </div>
   </div>
 </nav>
