--- a/sandbox-ui/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
+++ b/sandbox-ui/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
@@ -1,6 +1,6 @@
-<div class="animated fadeIn">
+<div>
     <div>
-        <span class="url-part" *ngFor="let path of activeView">{{path || Home}}</span>
+        <span class="url-part" *ngFor="let path of activeView">{{path}}</span>
     </div>
     <span class="animated bounceInDown delay-1 refresh-icon glyphicon glyphicon-refresh"
           tooltip="Reload"
