add manager numbers and address components

--- a/sandbox-ui/src/app/manage/main/manage-main.component.html
+++ b/sandbox-ui/src/app/manage/main/manage-main.component.html
@@ -1,3 +1,15 @@
-<p>
-  manage-main works!
-</p>
+<div class="row">
+  <div class="col-sm-2">
+    <div class="icon-grp" (click)="onIconClick('number')" >
+      <i class="material-icons">format_list_numbered</i>
+      <span>Manage Numbers</span>
+    </div>
+
+  </div>
+  <div class="col-sm-2">
+    <div class="icon-grp" (click)="onIconClick('address')" >
+      <i class="material-icons">contact_mail</i>
+      <span>Manage Addresses</span>
+    </div>
+  </div>
+</div>
