--- a/sandbox-ui/src/app/shared/components/breadcrumbs/breadcrumbs.component.scss
+++ b/sandbox-ui/src/app/shared/components/breadcrumbs/breadcrumbs.component.scss
@@ -14,6 +14,7 @@
   font-size: 1.3em;
   font-weight: 300;
   text-transform: capitalize;
+  cursor: pointer;
 
   &:last-child{
     font-weight: 900;
