add dynamic data table component and child components

--- a/sandbox-ui/src/app/manage/numbers/numbers.component.html
+++ b/sandbox-ui/src/app/manage/numbers/numbers.component.html
@@ -1,3 +1,6 @@
-<p>
-  numbers works!
-</p>
+<div>
+    <dynamic-data-table
+            [headerData]="headerData"
+            [tableData]="tableData"
+            [editorData]="editorData"></dynamic-data-table>
+</div>
