add dynamic data table default components

--- a/sandbox-ui/src/app/manage/numbers/numbers.component.html
+++ b/sandbox-ui/src/app/manage/numbers/numbers.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="animated fadeInUp">
     <dynamic-data-table
             [headerData]="headerData"
             [tableData]="tableData"
