--- a/sandbox-ui/src/app/shared/components/dynamic-data-table-default-header/dynamic-data-table-default-header.component.html
+++ b/sandbox-ui/src/app/shared/components/dynamic-data-table-default-header/dynamic-data-table-default-header.component.html
@@ -1,3 +1,10 @@
-<p>
-  dynamic-data-table-default-header works!
-</p>
+<div class="row def-header clear-floats">
+    <div class="search-panel">
+        <span>Filter</span>
+        <i class="material-icons">filter_list</i>
+    </div>
+    <div class="addNew">
+        <i class="material-icons">add_circle_outline</i>
+        <span>Add</span>
+    </div>
+</div>
