--- a/sandbox-ui/src/app/shared/components/dynamic-data-table-default-table/dynamic-data-table-default-table.component.html
+++ b/sandbox-ui/src/app/shared/components/dynamic-data-table-default-table/dynamic-data-table-default-table.component.html
@@ -1,3 +1,5 @@
-<p>
-  dynamic-data-table-default-table works!
-</p>
+<div class="row ddt-table">
+  <responsive-table
+          [dataSource]="tmpData"
+          [fieldSet]="fields"></responsive-table>
+</div>
