--- a/sandbox-ui/src/styles/_varibles.scss
+++ b/sandbox-ui/src/styles/_varibles.scss
@@ -17,3 +17,15 @@ $main-menu-icon-height : 46px;
 //Breadcrumbs
 $main-breadcrumbs-height : 46px;
 
+//Dynamic Data Table
+//default Header Component
+$ddt_def_header_height : 40px;
+$ddt_def_search_min_width : 300px;
+$ddt_def_add_new_min_width : 100px;
+
+//Editor Component Wrapper
+$ddt_editor_panel_width : 500px;
+
+
+//Responsive Table
+$responsive_row_height : 60px;
