--- a/sandbox-ui/src/app/manage/main/manage-main.component.html
+++ b/sandbox-ui/src/app/manage/main/manage-main.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeInUp">
   <div class="col-sm-2">
     <div class="icon-grp" (click)="onIconClick('number')" >
       <i class="material-icons">format_list_numbered</i>
