add manage number state to the store

--- a/sandbox-ui/src/app/manage/numbers/numbers.component.html
+++ b/sandbox-ui/src/app/manage/numbers/numbers.component.html
@@ -1,5 +1,6 @@
 <div class="animated fadeInUp">
     <dynamic-data-table
+            [isEditorOpen]="isEditorOpen"
             [headerData]="headerData"
             [tableData]="tableData"
             [editorData]="editorData"></dynamic-data-table>
