--- a/sandbox-ui/src/app/shared/components/app-header/app-header.component.scss
+++ b/sandbox-ui/src/app/shared/components/app-header/app-header.component.scss
@@ -60,10 +60,10 @@
   }
 
   .man {
-    color: #8A98A0;
-    font-weight: 600;
+    color: $gray_3;
+    font-weight: 300;
+    font-size: 2em;
     display: inline-block;
-    margin-top: 4px;
   }
 }
 
