--- a/sandbox-ui/src/app/shared/components/responsive-table/responsive-table.component.scss
+++ b/sandbox-ui/src/app/shared/components/responsive-table/responsive-table.component.scss
@@ -36,13 +36,16 @@
 
       @media only screen and (max-width : 768px) {
         display: block;
+        height: initial;
       }
 
       .tbl-cell{
         display: table-cell;
         padding: 10px 10px;
+        line-height: $responsive_row_height;
         @media only screen and (max-width : 768px) {
           display: block;
+          line-height: initial;
         }
       }
     }
