wire get user numbers service call

--- a/sandbox-ui/src/app/shared/components/dynamic-data-table-default-table/dynamic-data-table-default-table.component.html
+++ b/sandbox-ui/src/app/shared/components/dynamic-data-table-default-table/dynamic-data-table-default-table.component.html
@@ -1,5 +1,5 @@
 <div class="row ddt-table">
   <responsive-table
-          [dataSource]="tmpData"
-          [fieldSet]="fields"></responsive-table>
+          [dataSource]="tableDataSource"
+          [fieldSet]="fieldNames"></responsive-table>
 </div>
