ui changes related to rendering of user numbers

--- a/sandbox-ui/src/app/shared/components/dynamic-data-table-default-editor/dynamic-data-table-default-editor.component.scss
+++ b/sandbox-ui/src/app/shared/components/dynamic-data-table-default-editor/dynamic-data-table-default-editor.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../styles/colors";
+@import "../../../../styles/mixing";
 
 .ddt-editor{
   height: 300px;
-  background-color: $gray_4;
 }
