--- a/sandbox-ui/src/app/shared/components/responsive-table/responsive-table.component.html
+++ b/sandbox-ui/src/app/shared/components/responsive-table/responsive-table.component.html
@@ -5,11 +5,11 @@
   <div class="table">
 
     <div class="tbl-row header">
-      <div class="tbl-cell" *ngFor="let field of fieldSet">{{field}}</div>
+      <div class="tbl-cell" *ngFor="let field of fieldSet">{{field.tblColumnHead || field.dataFieldName }}</div>
     </div>
 
     <div class="tbl-row" *ngFor="let item of dataSource">
-      <div class="tbl-cell" *ngFor="let field of fieldSet">{{item[field]}}</div>
+      <div class="tbl-cell" *ngFor="let field of fieldSet">{{item[field.dataFieldName]}}</div>
     </div>
 
   </div>
