add ui for add edit number and basic model wiring

--- a/sandbox-ui/src/app/authentication/login/login.component.scss
+++ b/sandbox-ui/src/app/authentication/login/login.component.scss
@@ -8,11 +8,11 @@
   input {
     background-color: #dde3ec;
     height: 43px;
-    color: #8290a3;
-    border: 1px solid #dde3ec;
+    color: $gray_8;
+    border: 1px solid $gray_3;
 
     &:focus{
-      border: 1px solid #c3ccda;
+      border: 1px solid $gray_4;
     }
   }
 
