--- a/sandbox-ui/src/styles/_colors.scss
+++ b/sandbox-ui/src/styles/_colors.scss
@@ -1,5 +1,5 @@
 $primary-color_main : #3b5998;
-$primary-color_dark : #263961;
+$primary-color_dark : #1c2a48;
 $primary-color_menu : #1b4665;
 $primary-color_light : #164e6a;
 
