--- a/sandbox-ui/src/app/shared/components/dynamic-data-table-default-header/dynamic-data-table-default-header.component.scss
+++ b/sandbox-ui/src/app/shared/components/dynamic-data-table-default-header/dynamic-data-table-default-header.component.scss
@@ -43,6 +43,7 @@
     display: inline-block;
     float: left;
     height: 100%;
+    font-weight: 900;
     position: relative;
     text-transform: uppercase;
     cursor: pointer;
