add api main menu and landing page

--- a/sandbox-ui/src/app/manage/main/manage-main.component.html
+++ b/sandbox-ui/src/app/manage/main/manage-main.component.html
@@ -1,15 +1,21 @@
 <div class="row animated fadeInUp">
-  <div class="col-sm-2">
-    <div class="icon-grp" (click)="onIconClick('number')" >
+
+  <div class="col-sm-3 text-center icon-container">
+
+    <div class="icon-grp numbers" (click)="onIconClick('number')" >
       <i class="material-icons">format_list_numbered</i>
-      <span>Manage Numbers</span>
+      <span>Numbers</span>
     </div>
 
   </div>
-  <div class="col-sm-2">
-    <div class="icon-grp" (click)="onIconClick('address')" >
+
+  <div class="col-sm-3 text-center icon-container">
+
+    <div class="icon-grp addresses" (click)="onIconClick('address')" >
       <i class="material-icons">contact_mail</i>
-      <span>Manage Addresses</span>
+      <span>Addresses</span>
     </div>
+
   </div>
+
 </div>
