--- a/sandbox-ui/src/styles/_colors.scss
+++ b/sandbox-ui/src/styles/_colors.scss
@@ -9,7 +9,7 @@ $accent-dark-color : #c1711d;
 
 $secondary_color : #32c5d2;
 
-$background-color : #f5f5f5;
+$background-color : #ffffff;
 $background-color-login : #3b5998;
 
 
@@ -29,3 +29,4 @@ $warning : #e1a10c;
 $success : #107124;
 
 $tbl-row-selected-color : #fbfbcb;
+$tbl-row-hover-color : #FFFFEF;
