--- a/sandbox-ui/src/styles/_bootstrap_overides.scss
+++ b/sandbox-ui/src/styles/_bootstrap_overides.scss
@@ -26,6 +26,12 @@
 .form-control{
   border-radius: 0px;
   height: 40px;
+
+
+  &.ng-touched.ng-invalid, &.ng-dirty.ng-invalid{
+    border-color: #ff6c6c;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(247, 68, 0, 0.33);
+  }
 }
 
 .btn{
