--- a/sandbox-ui/src/app/manage/ddt-edit-create-number/ddt-edit-create-number.component.html
+++ b/sandbox-ui/src/app/manage/ddt-edit-create-number/ddt-edit-create-number.component.html
@@ -7,42 +7,8 @@
         </span>
     </div>
 
-   <!-- <form novalidate (ngSubmit)="onFormSubmit()" #numberForm="ngForm">
-        <div class="form-group">
-            <label for="idNumber">Number</label>
-            <input type="text"
-                   [(ngModel)]="numberModel.number"
-                   name="number" class="form-control" id="idNumber"
-                   placeholder="Number">
-        </div>
-        <div class="form-group">
-            <label for="idBalance">Balance</label>
-            <input type="text"
-                   [(ngModel)]="numberModel.numberBalance"
-                   name="balance" class="form-control" id="idBalance"
-                   placeholder="Balance">
-        </div>
-        <div class="form-group">
-            <label for="idReservedAmount">Reserved Amount</label>
-            <input type="text"
-                   [(ngModel)]="numberModel.reservedAmount"
-                   name="reserved_amount" class="form-control"
-                   id="idReservedAmount" placeholder="Reserved Amount">
-        </div>
-        <div class="form-group">
-            <label for="idDescription">Description</label>
-            <textarea class="form-control"
-                      [(ngModel)]="numberModel.description"
-                      name="description"
-                      id="idDescription" placeholder="Description"></textarea>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Add</button>
-    </form>-->
-
-
-
     <dynamic-form
-    [formItems]="formDataModel"></dynamic-form>
+            [formItems]="formDataModel"
+            (onFormSubmit)="onFormSubmit($event)"></dynamic-form>
 
 </div>
