--- a/sandbox-ui/src/app/shared/components/dynamic-form/dynamic-form.component.html
+++ b/sandbox-ui/src/app/shared/components/dynamic-form/dynamic-form.component.html
@@ -2,7 +2,7 @@
     <form (ngSubmit)="onFormSubmit.emit(dynamicForm.value)"
           [formGroup]="dynamicForm">
 
-        <dynamic-form-element *ngFor="let item of formItems"
+        <dynamic-form-element [ngClass]="formLayoutGridStyle" *ngFor="let item of formItems"
                               [elementData]="item"
                               [form]="dynamicForm"></dynamic-form-element>
 
