refactor api ui to work with swagger definitions

--- a/sandbox-ui/src/app/api/api-type/api-type.component.html
+++ b/sandbox-ui/src/app/api/api-type/api-type.component.html
@@ -1,11 +1,22 @@
 <div class="row animated fadeInUp">
 
-    <div class="col-sm-3 text-center icon-container" *ngFor="let service of serviceTypes">
-
-        <div class="icon-grp numbers" (click)="onServiceClick(service)" >
-            <i class="material-icons"></i>
-            <span>{{service}}</span>
+    <div class="col-sm-12 service-cat" *ngFor="let serviceCat of serviceTypes">
+        <div class="row">
+            <div class="col-sm-12 category">{{serviceCat.name}}</div>
         </div>
 
+        <div class="row">
+            <div class="col-sm-3 text-center icon-container" *ngFor="let endPoint of serviceCat.endPoints" >
+
+                <div class="icon-grp numbers" (click)="onServiceClick(endPoint)" >
+                    <i class="material-icons"></i>
+                    <span>{{endPoint.displayName}}</span>
+                </div>
+
+            </div>
+        </div>
     </div>
+
+
+
 </div>
