--- a/sandbox-ui/src/app/api/api-type/api-type.component.scss
+++ b/sandbox-ui/src/app/api/api-type/api-type.component.scss
@@ -10,6 +10,24 @@
   padding-bottom:20px;
 }
 
+.service-cat{
+  padding-top: 50px;
+
+  &:first-child{
+    padding-top: 0px;
+  }
+}
+
+.category{
+  font-weight: 900;
+  font-size: 1.1em;
+  padding-bottom: 5px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 3px 5px 0px rgba(204, 204, 204, 0.4);
+}
+
+
 .icon-grp {
   min-height: 100px;
   min-width: 100px;
