add dynamic form submit service call

--- a/sandbox-ui/src/app/shared/components/dynamic-form/dynamic-form.component.html
+++ b/sandbox-ui/src/app/shared/components/dynamic-form/dynamic-form.component.html
@@ -1,6 +1,6 @@
 <div>
     <form (ngSubmit)="onFormSubmit.emit(dynamicForm.value)"
-          [formGroup]="dynamicForm">
+          [formGroup]="dynamicForm" *ngIf="formItems?.length > 0">
 
         <dynamic-form-element [ngClass]="formLayoutGridStyle" *ngFor="let item of formItems"
                               [elementData]="item"
