dynamic form generation cont.

--- a/sandbox-ui/src/app/shared/components/dynamic-form-element/dynamic-form-element.component.html
+++ b/sandbox-ui/src/app/shared/components/dynamic-form-element/dynamic-form-element.component.html
@@ -15,6 +15,13 @@
                   [formControlName]="elementData?.key"
                   [id]="elementData?.key"
                   [placeholder]="elementData?.label"></textarea>
+
+        <select *ngSwitchCase="'DROPDOWN'"
+                [id]="elementData?.key"
+                [formControlName]="elementData?.key">
+            <option *ngFor="let opt of dropdownSource" [value]="opt.key">{{opt.value}}</option>
+        </select>
+
     </div>
 
     <div class="errorMessage">
