--- a/sandbox-ui/src/app/api/api-type/api-type.component.html
+++ b/sandbox-ui/src/app/api/api-type/api-type.component.html
@@ -1,16 +1,32 @@
 <div class="row animated fadeInUp">
-
-    <div class="col-sm-12 service-cat" *ngFor="let serviceCat of serviceTypes">
+    <div class="col-sm-12 service-cat" *ngIf="serviceTypes?.config?.length > 0">
         <div class="row">
-            <div class="col-sm-12 category">{{serviceCat.name}}</div>
+            <div class="col-sm-12 category">{{serviceTypes.apiType}} Configurations</div>
         </div>
 
         <div class="row">
-            <div class="col-sm-3 text-center icon-container" *ngFor="let endPoint of serviceCat.endPoints" >
+            <div class="col-sm-3 text-center icon-container" *ngFor="let config of serviceTypes.config " >
 
-                <div class="icon-grp numbers" (click)="onServiceClick(endPoint)" >
+                <div class="icon-grp numbers" (click)="onServiceClick(config)" >
                     <i class="material-icons"></i>
-                    <span>{{endPoint.displayName}}</span>
+                    <span>{{config.name}}</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-12 service-cat" *ngIf="serviceTypes?.services?.length > 0">
+        <div class="row">
+            <div class="col-sm-12 category">{{serviceTypes.apiType}} Services</div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3 text-center icon-container" *ngFor="let service of serviceTypes.services " >
+
+                <div class="icon-grp numbers" (click)="onServiceClick(service)" >
+                    <i class="material-icons"></i>
+                    <span>{{service.name}}</span>
                 </div>
 
             </div>
@@ -18,5 +34,6 @@
     </div>
 
 
+    <router-outlet></router-outlet>
 
 </div>
