--- a/sandbox-ui/src/app/app.component.scss
+++ b/sandbox-ui/src/app/app.component.scss
@@ -2,21 +2,24 @@
 @import "../styles/varibles";
 @import "../styles/mixing";
 
-:host{
+:host {
   background-color: $background-color;
   min-width: 300px;
 
-  &.login{
-    background-color:$background-color-login
+  &.login {
+    background-color: $background-color-login;
+
+    .content-div {
+      margin-top: 0px!important;
+    }
   }
 }
 
-:host /deep/ ng2-toasty .toast{
+:host /deep/ ng2-toasty .toast {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
-
 
   -webkit-animation-name: bounceInUp;
   -moz-animation-name: bounceInUp;
@@ -24,7 +27,7 @@
   animation-name: bounceInUp;
 }
 
-router-outlet{
+router-outlet {
   display: block;
 
   @media screen and (max-width: 768px) {
@@ -32,7 +35,7 @@ router-outlet{
   }
 }
 
-ng2-slim-loading-bar{
+ng2-slim-loading-bar {
   position: fixed;
   top: $topbar-height;
   z-index: 500;
@@ -40,16 +43,16 @@ ng2-slim-loading-bar{
   right: 0px;
 }
 
-:host /deep/ ng2-slim-loading-bar .slim-loading-bar-progress{
+:host /deep/ ng2-slim-loading-bar .slim-loading-bar-progress {
   background-color: $accent-color !important;
   height: 4px !important;
 }
 
-.container-fluid{
+.container-fluid {
   height: 100%;
 }
 
-.content-container{
+.content-container {
   margin-left: -15px;
   margin-right: -15px;
   position: relative;
@@ -59,28 +62,28 @@ ng2-slim-loading-bar{
   }
 }
 
-.menu-container{
+.menu-container {
   position: fixed;
   top: $topbar-height + $main-breadcrumbs-height;
   bottom: 0px;
   left: 0px;
-  z-index:100;
+  z-index: 100;
 
   @media screen and (max-width: 768px) {
     top: $topbar-height * 2;
   }
 }
 
-.view-container{
+.view-container {
   @include transition(margin-left 0.8s ease-in-out);
   margin-left: $main-menu-default-width;
 
-  &.menu-expand{
+  &.menu-expand {
     animation-delay: 0.5s;
     margin-left: $main-menu-expanded-width;
   }
 
-  .breadcrumbs-bar{
+  .breadcrumbs-bar {
     border-radius: 0px;
     height: $main-breadcrumbs-height;
     line-height: 2.2em;
@@ -93,12 +96,12 @@ ng2-slim-loading-bar{
     min-width: $app-min-width - $main-menu-default-width;
     @include transition(all 0.3s ease-in-out);
 
-    &.menu-expand{
+    &.menu-expand {
       padding-left: $main-menu-expanded-width + 10;
     }
   }
 
-  .content-div{
+  .content-div {
     margin-top: $main-breadcrumbs-height;
   }
 }
